--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "scripts": {
     "start-test": "ts-node Teste.ts",
-    "start-train": "ts-node Train.ts"
+    "start-test-pdf": "ts-node Teste_pdf.ts",
+    "start-test-pdf-refined": "ts-node Teste_pdf_REFINED.ts",
+    "start-train": "ts-node Train.ts",
+    "start-trainJSL": "ts-node Train_jsonL.ts"
   },
   "dependencies": {
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.6.1",
     "openai": "^4.89.0",
     "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.5",
     "pdfjs-dist": "^5.0.375",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "node-fetch": "^2.6.1",
-    "form-data": "^4.0.0"
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "ts-node": "^10.0.0",
